fixed a overflow issue on the recipe card page

--- a/react-app/src/components/recipes/css/recipe-card.css
+++ b/react-app/src/components/recipes/css/recipe-card.css
@@ -29,6 +29,9 @@
     font-size: 20px;
     font-weight: bolder;
     padding: 10px 20px;
+    max-width: 700px;
+    white-space: normal;
+    overflow-wrap: break-word;
 }
 
 /* ******** ingred ******************************** */
